opsiconfd (4.1.1-1) UNRELEASED; urgency=medium

  * Using absolute imports.
  * Info page uses now generators for site generation.
  * Python 3 compatible octal values.
  * opsiconfd.conf: Update ip now defaults to yes.
  * Removed references to old message bus implementation.
  * Refactored monitoring module.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 16 Sep 2016 12:12:24 +0200

opsiconfd (4.0.7.5.2-1) stable; urgency=medium

  * Restore the ordering of the statement to avoid problems with signed
    configed.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 05 Oct 2016 11:11:00 +0200

opsiconfd (4.0.7.5.1-1) stable; urgency=medium

  * Re-introduce reference to non-existing file to not break currently
    distributed signed versions of opsi-configed.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 13 Sep 2016 12:02:51 +0200

opsiconfd (4.0.7.5-1) stable; urgency=medium

  * Remove reference to non-existing file from JNLP template.
  * Refactored key verification code to be easier to debug.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 12 Sep 2016 16:08:32 +0200

opsiconfd (4.0.7.4-1) stable; urgency=medium

  * Parameter passing now also works in OpenJDK / IcedTea.
    Refer to bug OpenJDK bug #1760 for more information.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 06 Jun 2016 14:55:34 +0200

opsiconfd (4.0.7.3-1) testing; urgency=medium

  * Reverted the changes to serve JNLP at /configed/.
    The change will be done from within Configed.
  * Statistics logged during shutdown / reload will now be sorted by the name
    of the called method.
  * Avoid that logging statistics during reload fails the service because of
    missing start time.
  * Overhauled the passing of parameters for JNLP to work as expected.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 03 Jun 2016 15:07:01 +0200

opsiconfd (4.0.7.2-1) testing; urgency=medium

  * The path "/configed/" is now also accessible.
    It serves the Java Web Start version of Configed.
