@@ -50,15 +50,6 @@
 
 	admin networks = 0.0.0.0/0
 
-	# Enable multiprocessing
-	# Multiprocessing is a co-founded opsi extension module
-	# Opsiconfd needs to be reloaded (SIGHUP) for changes to take effect.
-	#
-	# Default:
-	#   multiprocessing = no
-
-	multiprocessing = no
-
 	# Location of the pid file.
 	# Opsiconfd needs to be restarted for changes to take effect.
 	#
