@@ -52,12 +52,11 @@ logger = Logger()
 
 
 class WorkerOpsiconfd(WorkerOpsi):
-	def __init__(self, service, request, resource, multiProcessing=False):
+	def __init__(self, service, request, resource):
 		WorkerOpsi.__init__(self, service, request, resource)
 		self._setLogFile(self)
 
 		self.authRealm = 'OPSI Configuration Service'
-		self.multiProcessing = multiProcessing
 
 	def _setLogFile(self, obj):
 		if self.service.config['machineLogs'] and self.service.config['logFile']:
@@ -346,15 +345,8 @@ class WorkerOpsiconfd(WorkerOpsi):
 			return d
 
 		modules = self.service._backend.backend_info()['modules']
-		if self.multiProcessing and \
-		(not modules.get('valid', False) or not modules.get('high_availability', False)):
-			logger.warning("Failed to verify modules signature")
-			self.multiProcessing = False
 
-		if self.multiProcessing:
-			d = _spawnProcess()
-		else:
-			d = defer.maybeDeferred(_createBackend)
+		d = defer.maybeDeferred(_createBackend)
 
 		def finish(ignored):
 			self.session.callInterface = None
@@ -370,7 +362,6 @@ class WorkerOpsiconfd(WorkerOpsi):
 			df.addCallback(setInterface)
 			df.addCallback(lambda x: defer.maybeDeferred(self.session.callInstance.accessControl_userIsAdmin))
 			df.addCallback(setCredentials)
-
 
 			def f():
 				if self.session.isHost:
@@ -429,12 +420,10 @@ class WorkerOpsiconfd(WorkerOpsi):
 
 class WorkerOpsiconfdJsonRpc(WorkerOpsiconfd, WorkerOpsiJsonRpc, MultiprocessWorkerOpsiJsonRpc):
 	def __init__(self, service, request, resource):
-		WorkerOpsiconfd.__init__(self, service, request, resource, multiProcessing=service.config["multiprocessing"])
+		WorkerOpsiconfd.__init__(self, service, request, resource)
 		WorkerOpsiJsonRpc.__init__(self, service, request, resource)
 
 		modules = self.service._backend.backend_info()['modules']
-		if self.multiProcessing and (modules.get('valid', False) and modules.get('high_availability', False)):
-			MultiprocessWorkerOpsiJsonRpc.__init__(self, service, request, resource)
 
 	def _getCallInstance(self, result):
 		d = defer.maybeDeferred(self._getBackend, result)
@@ -518,10 +507,7 @@ class WorkerOpsiconfdJsonRpc(WorkerOpsiconfd, WorkerOpsiJsonRpc, MultiprocessWor
 		return result
 
 	def _processQuery(self, result):
-		if self.multiProcessing:
-			return MultiprocessWorkerOpsiJsonRpc._processQuery(self, result)
-		else:
-			return WorkerOpsiJsonRpc._processQuery(self, result)
+		return WorkerOpsiJsonRpc._processQuery(self, result)
 
 	def _generateResponse(self, result):
 		return WorkerOpsiJsonRpc._generateResponse(self, result)
