@@ -6,6 +6,7 @@ opsiconfd (4.1.1-1) UNRELEASED; urgency=medium
   * opsiconfd.conf: Update ip now defaults to yes.
   * Removed references to old message bus implementation.
   * Refactored monitoring module.
+  * Removed unsupported multiprocessing option.
 
  -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 16 Sep 2016 12:12:24 +0200
 
